# signal-messenger-insights

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPTION-A-SUCCESS.md  OPTION-D-INVESTIGATION.md  QUICK-START.md  README.md  SOLUTION-SUMMARY.md  TECH-STACK-PREFERENCES.md  TEST-VERIFICATION.md  docker-compose.yml  extract-signal-key.sh  inspect_schema.py  inspect_triggers.py  test_schema.py
.github/workflows/: docker-publish.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/crypto/: __init__.py  signal.py
backend/app/db/: __init__.py  queries.py
backend/app/models/: schemas.py
docs/: conversation-analytics-features.md  plan.md  v0-template-integration-plan.md
frontend/: Makefile  index.html  instrumentation.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  test-trigger-stripping.js
frontend.backup/: package-lock.json  package.json  vite.config.ts
frontend.backup/src/: App.tsx  index.css
frontend.backup/src/components/: ChatStatistics.tsx  ConversationList.tsx  StatisticsPage.tsx  UploadForm.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-statistics.tsx  conversation-header.tsx  conversation-list.tsx  key-extraction-helper.tsx  message-view.tsx  signal-chat-archive.tsx  signal-landing-page.tsx
frontend/lib/: global-db.ts  signal-db.ts
frontend/src/: App.tsx  index.css
(+15 files in other folders)
