[project]
name = "signal-archive-viewer"
version = "0.1.0"
description = "Local-only Signal Desktop archive viewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "cryptography>=42.0.0",
    # Use pysqlcipher3 for Signal Desktop SQLCipher 4.x database decryption
    "pysqlcipher3>=1.2.0",
    # Use pycryptodome for decrypting encryptedKey from system keyring
    "pycryptodome>=3.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
